--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
           <artifactId>jaudiotagger</artifactId>
           <version>2.0.3</version>
       </dependency>
+      <dependency>
+          <groupId>commons-cli</groupId>
+          <artifactId>commons-cli</artifactId>
+          <version>1.3.1</version>
+      </dependency>
   </dependencies>
   <build>
       <plugins>
@@ -51,6 +56,19 @@
                 <mainClass>com.jmc.juanitunes.organizer.Main</mainClass>
             </configuration>
             </plugin>
+            <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>com.jmc.juanitunes.Main</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
+    </plugin>
       </plugins>
   </build>
 </project>
